--- a/.github/workflows/github-actions-e2e-mlops-pipeline-prod.yml
+++ b/.github/workflows/github-actions-e2e-mlops-pipeline-prod.yml
@@ -35,7 +35,7 @@ jobs:
         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Deploy to Domino Dev
+    - name: Data prep script before model training
       run: |
         python src/cicd/cicd-data-prep.py ${{ vars.DOMINO_ENV }} ${{ secrets.DOMINO_USER_API_KEY }}
   modeltrain-prod:
@@ -58,7 +58,7 @@ jobs:
         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Deploy to Domino Dev
+    - name: Model training script
       run: |
         python src/cicd/cicd-train-model.py ${{ vars.DOMINO_ENV }} ${{ secrets.DOMINO_USER_API_KEY }}        
   modeldeploy-prod:
@@ -81,6 +81,6 @@ jobs:
         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Deploy to Domino Dev
+    - name: Deploy to Domino Staging
       run: |
         python src/cicd/cicd-deploy-model.py ${{ vars.DOMINO_ENV }} ${{ secrets.DOMINO_USER_API_KEY }}          
